New Navbar added

--- a/Navbars/navbar1.html
+++ b/Navbars/navbar1.html
@@ -63,7 +63,7 @@
     </style>
   </head>
   <body class="body">
-    <h1 class="title">Animated Icon Navbar</h1>
+    <h1 class="title">Animated Icon Navbar 1</h1>
     <div class="navbar">
       <div class="nav-item"><i class="fas fa-home"></i></div>
       <div class="nav-item"><i class="fas fa-user"></i></div>
