--- a/Navbars/navbar3.html
+++ b/Navbars/navbar3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sliding Glow Navbar</title>
+    <title>3D Floating Navbar</title>
     <script
       src="https://kit.fontawesome.com/1ca214b935.js"
       crossorigin="anonymous"
@@ -21,7 +21,8 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: #0d0d0d;
+        background: radial-gradient(circle, #1b1b1b, #0d0d0d);
+        perspective: 1000px;
       }
       .navbar {
         display: flex;
@@ -31,57 +32,51 @@
         border-radius: 50px;
         backdrop-filter: blur(10px);
         box-shadow: 0 10px 30px rgba(255, 255, 255, 0.1);
-        position: relative;
-        overflow: hidden;
+        transform-style: preserve-3d;
+        transition: transform 0.5s ease;
       }
       .nav-item {
-        width: 50px;
-        height: 50px;
+        width: 60px;
+        height: 60px;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
         position: relative;
         cursor: pointer;
-        transition: all 0.3s ease;
+        background: rgba(255, 255, 255, 0.05);
+        box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
+        transform: rotateY(0deg);
+        transition: transform 0.5s ease, box-shadow 0.5s ease;
       }
       .nav-item i {
-        font-size: 24px;
+        font-size: 28px;
         color: white;
         transition: color 0.3s ease;
       }
-      .nav-item::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(45deg, #ff00ff, #00ffff);
-        border-radius: 50%;
-        transform: scale(0);
-        transition: transform 0.3s ease;
-        z-index: -1;
-      }
-      .nav-item:hover::before {
-        transform: scale(1.5);
-        opacity: 0.8;
+      .nav-item:hover {
+        transform: rotateY(360deg) scale(1.1);
+        box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
       }
       .nav-item:hover i {
         color: #ff00ff;
       }
+
       .title {
         color: white;
-        font-size: 24px;
+        font-size: 2rem;
+        margin-bottom: 20px;
       }
     </style>
   </head>
   <body>
-    <h1 class="title">Animated Icon Navbar 2</h1>
+    <h1 class="title">Animated Icon Navbar 3</h1>
     <div class="navbar">
-      <div class="nav-item"><i class="fas fa-home"></i></div>
-      <div class="nav-item"><i class="fas fa-user"></i></div>
-      <div class="nav-item"><i class="fas fa-blog"></i></div>
-      <div class="nav-item"><i class="fas fa-envelope"></i></div>
-      <div class="nav-item"><i class="fas fa-sign-in-alt"></i></div>
+      <div class="nav-item"><i class="fas fa-rocket"></i></div>
+      <div class="nav-item"><i class="fas fa-user-secret"></i></div>
+      <div class="nav-item"><i class="fas fa-magic"></i></div>
+      <div class="nav-item"><i class="fas fa-bell"></i></div>
+      <div class="nav-item"><i class="fas fa-cog"></i></div>
     </div>
   </body>
 </html>
