--- a/Menu/menu2.html
+++ b/Menu/menu2.html
@@ -8,17 +8,16 @@
       body {
         display: flex;
         justify-content: center;
-        align-items: center;
+
         height: 100vh;
         background: linear-gradient(135deg, #0f0f0f, #1a1a2e);
         overflow: hidden;
         font-family: Arial, sans-serif;
       }
       .menu-container {
+        padding-top: 40px;
         position: relative;
         display: flex;
-        flex-direction: column;
-        align-items: center;
         gap: 20px;
       }
       .menu-item {
